--- a/sb/index.html
+++ b/sb/index.html
@@ -64,9 +64,9 @@
                         <div class="bg-info p-3"><h5>4 of 5 Goals In Life / Dream</h5><p>I aspired to succeed in my profession and wanted to work as a front-end developer or UI/UX designer. In addition to my job, I wanted to teach kids how to play an instrument. And lastly, to provide financial support for my family.</p> </div>
                         <div class="bg-warning p-3"><h5>5 of 5 Picture Gallery</h5><p>
                           <img src="https://scontent.fmnl40-1.fna.fbcdn.net/v/t1.6435-9/90999744_3169667706398023_1292219066521485312_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHCk5xIsK9e4-vOQXb5HTmdNuUQsihwcGw25RCyKHBwbAfPDd5s7-JMEpV8s5uxki2Se1BnxEyzOxbPg9Mu1-L3&_nc_ohc=Hm1YZgJh5ngQ7kNvgHkd61L&_nc_zt=23&_nc_ht=scontent.fmnl40-1.fna&_nc_gid=AqnnNusTTyktiV0y4LLVxqF&oh=00_AYB8g52212Wz9LFv4ItCcb4Lmzgamv79qdCuerpydyyV8A&oe=676F3322" width="400" height="300">
-                          <img src="images/468536856_2292853967780231_470466534020564223_n.jpg" width="200" height="300">
-                          <img src="images/468648788_2292853994446895_4998778464240852768_n.jpg" width="200" height="300">
-                          <img src="images/468640634_2292855284446766_5526978321035397568_n.jpg" width="400" height="300">
+                          <img src="https://github.com/mythoneri/webprog-personal-website/blob/d14f2668460c4c2fff40abfada9168ae52941df2/images/468536856_2292853967780231_470466534020564223_n.jpg" width="200" height="300">
+                          <img src="https://github.com/mythoneri/webprog-personal-website/blob/d14f2668460c4c2fff40abfada9168ae52941df2/images/468648788_2292853994446895_4998778464240852768_n.jpg" width="200" height="300">
+                          <img src="https://github.com/mythoneri/webprog-personal-website/blob/d14f2668460c4c2fff40abfada9168ae52941df2/images/468640634_2292855284446766_5526978321035397568_n.jpg" width="400" height="300">
                         </p></div>
                       </div>  
                     </div>
